--- a/index.html
+++ b/index.html
@@ -1,82 +1,211 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TertibHub</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="icon" href="assets/img/LOGO BREN.pdf.png">
-    <link rel="stylesheet" href="assets/index.css">
+    <link rel="icon" href="assets/img/LOGO BREN.pdf.png" />
+    <link rel="stylesheet" href="assets/index.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
 </head>
 
 <body>
+
     <nav class="absolute top-0 flex justify-between items-center w-full py-8 px-28 bg-transparent text-slate-100">
-        <a href="" class="w-1/3 flex items-center gap-3 text-lg"><img src="assets/img/LOGO BREN.pdf.png"
-                class="w-14 rounded-lg" alt="">TertibHub</a>
-        <div class="flex justify-evenly w-1/3">
+        <a href="" class="w-1/3 flex items-center gap-2 text-xl" id="NavBrand"><img src="assets/img/LOGO BREN.pdf.png"
+                class="w-14 rounded-lg" alt="" />TertibHub</a>
+        <div class="flex justify-evenly gap-2 w-1/3">
             <a href="" class="border-2 pb-1 border-transparent hover:border-b-2 hover:border-b-white">Home</a>
-            <a href="" class="border-2 pb-1 border-transparent hover:border-b-2 hover:border-b-white">Histori Pelanggaran</a>
+            <a href="" class="border-2 pb-1 border-transparent hover:border-b-2 hover:border-b-white">Histori
+                Pelanggaran</a>
             <a href="" class="border-2 pb-1 border-transparent hover:border-b-2 hover:border-b-white">Guide Book</a>
         </div>
-        <div class="w-1/3 flex justify-end">
+        <div class="w-1/3 flex justify-end" id="LoginBtn">
             <a href="" class="btn btn-primary items-center text-white px-9 py-2 rounded-lg">Get Started</a>
         </div>
     </nav>
-    <header class="flex flex-col justify-center items-center w-full h-full" id="hero">
-        <div class="text-center text-white">
-            <h1 class="text-6xl font-bold text-blue-600 my-8">Campus Harmony<br><span class="text-white">Begins With
-                    Clear Rules</span></h1>
-            <h6 class="my-8 text-xl">Terapkan Disiplin dan Ketertiban di Kampus, Rasakan Lingkungan Belajar yang
-                <br>Harmonis dan Kondusif untuk Kesuksesan Anda.
-            </h6>
-            <a href="" class="btn btn-primary items-center text-white px-9 py-2 rounded-lg">View Book</a>
-        </div>
+
+    <header class="flex flex-col justify-center items-center w-full h-full text-center text-white">
+        <h1 class="text-6xl font-bold text-blue-600 my-8">
+            Campus Harmony<br /><span class="text-white">Begins With Clear Rules</span>
+        </h1>
+        <h6 class="my-8 text-xl">
+            Terapkan Disiplin dan Ketertiban di Kampus, Rasakan Lingkungan Belajar
+            yang <br />Harmonis dan Kondusif untuk Kesuksesan Anda.
+        </h6>
+        <a href="" class="btn btn-primary items-center text-white px-9 py-2 rounded-lg"
+            style="font-family: 'product Sans Bold'">View Book</a>
     </header>
 
     <section class="flex justify-center -mt-32 gap-10" id="features">
-        <div class="relative"><img src="assets/img/Vector_garis.png" class="relative w-52 z-10" alt=""><img
-                src="assets/img/Vector.png" class="absolute w-44 top-4 left-4 z-20" alt="">
-            <div class="absolute z-30 flex flex-col items-center gap-1" style="top: 55px; left: 50px;">
-                <img src="assets/img/Anonymity of Reporting.png" class="w-14" alt="">
-                <h6 class="text-center text-blue-600 text-lg leading-5">Anonymity of<br>Reporting</h6>
+        <div class="relative">
+            <img src="assets/img/Vector_garis.png" class="relative w-52 z-10" alt="" /><img src="assets/img/Vector.png"
+                class="absolute w-44 top-4 left-4 z-20" alt="" />
+            <div class="absolute z-30 flex flex-col items-center gap-1" style="top: 55px; left: 50px">
+                <img src="assets/img/Anonymity of Reporting.png" class="w-14" alt="" />
+                <h6 class="text-center text-blue-600 text-base leading-5">
+                    Anonymity of<br />Reporting
+                </h6>
             </div>
         </div>
-        <div class="relative"><img src="assets/img/Vector_garis.png" class="relative w-52 z-10" alt=""><img
-                src="assets/img/Vector.png" class="absolute w-44 top-4 left-4 z-20" alt="">
-            <div class="absolute z-30 flex flex-col items-center gap-1" style="top: 55px; left: 53px;">
-                <img src="assets/img/Transparansi Proses.png" class="w-14" alt="">
-                <h6 class="text-center text-blue-600 text-lg leading-5">Transparansi<br>proses</h6>
+        <div class="relative">
+            <img src="assets/img/Vector_garis.png" class="relative w-52 z-10" alt="" /><img src="assets/img/Vector.png"
+                class="absolute w-44 top-4 left-4 z-20" alt="" />
+            <div class="absolute z-30 flex flex-col items-center gap-1" style="top: 55px; left: 53px">
+                <img src="assets/img/Transparansi Proses.png" class="w-14" alt="" />
+                <h6 class="text-center text-blue-600 text-base leading-5">
+                    Transparansi<br />proses
+                </h6>
             </div>
         </div>
-        <div class="relative"><img src="assets/img/Vector_garis.png" class="relative w-52 z-10" alt=""><img
-                src="assets/img/Vector.png" class="absolute w-44 top-4 left-4 z-20" alt="">
-            <div class="absolute z-30 flex flex-col items-center gap-1" style="top: 55px; left: 53px;">
-                <img src="assets/img/Akses Tanpa Batas.png" class="w-14" alt="">
-                <h6 class="text-center text-blue-600 text-lg leading-5">Akses Tanpa<br>Batas</h6>
+        <div class="relative">
+            <img src="assets/img/Vector_garis.png" class="relative w-52 z-10" alt="" /><img src="assets/img/Vector.png"
+                class="absolute w-44 top-4 left-4 z-20" alt="" />
+            <div class="absolute z-30 flex flex-col items-center gap-1" style="top: 55px; left: 53px">
+                <img src="assets/img/Akses Tanpa Batas.png" class="w-14" alt="" />
+                <h6 class="text-center text-blue-600 text-base leading-5">
+                    Akses Tanpa<br />Batas
+                </h6>
             </div>
         </div>
-        <div class="relative"><img src="assets/img/Vector_garis.png" class="relative w-52 z-10" alt=""><img
-                src="assets/img/Vector.png" class="absolute w-44 top-4 left-4 z-20" alt="">
-            <div class="absolute z-30 flex flex-col items-center gap-1" style="top: 55px; left: 47px;">
-                <img src="assets/img/Validasi Sanksi Terotomatisasi.png" class="w-14" alt="">
-                <h6 class="text-center text-blue-600 text-lg leading-5">Validasi Sanksi<br>Terotomasi</h6>
+        <div class="relative">
+            <img src="assets/img/Vector_garis.png" class="relative w-52 z-10" alt="" /><img src="assets/img/Vector.png"
+                class="absolute w-44 top-4 left-4 z-20" alt="" />
+            <div class="absolute z-30 flex flex-col items-center gap-1" style="top: 55px; left: 47px">
+                <img src="assets/img/Validasi Sanksi Terotomatisasi.png" class="w-14" alt="" />
+                <h6 class="text-center text-blue-600 text-base leading-5">
+                    Validasi Sanksi<br />Terotomasi
+                </h6>
             </div>
         </div>
     </section>
 
-    <section class="flex flex-col justify-center items-center px-28" id="TatibDefinition">
-        <h2 class="text-5xl">Apa Itu <span class="text-blue-600">Tatib?</span></h2>
-        <p class="text-xl text-center">Dalam lingkungan kampus, tata tertib biasanya mengacu pada peraturan yang mengatur perilaku, tanggung jawab,
-            dan hak-hak mahasiswa, dosen, serta staf dalam kegiatan sehari-hari di kampus. Tata tertib ini membantu
-            menjaga suasana kondusif untuk belajar, bekerja, dan berinteraksi dengan sesama.</p>
-        <div class="flex justify-between mt-8">
-            <div class="w-96 h-80 bg-gray-200 rounded-3xl">
+    <section class="flex flex-col justify-center items-center my-24 px-28 gap-10" id="TatibDefinition">
+        <h2 class="text-5xl">
+            Apa Itu <span class="text-blue-600">Tatib?</span>
+        </h2>
+        <p class="text-xl text-center">
+            Dalam lingkungan kampus, tata tertib biasanya mengacu pada peraturan
+            yang mengatur perilaku, tanggung jawab, dan hak-hak mahasiswa, dosen,
+            serta staf dalam kegiatan sehari-hari di kampus. Tata tertib ini
+            membantu menjaga suasana kondusif untuk belajar, bekerja, dan
+            berinteraksi dengan sesama.
+        </p>
+        <div class="flex flex-row gap-5">
+            <div class="flex flex-col justify-between w-96 h-80 bg-gray-200 rounded-3xl px-8 pt-12 pb-8">
+                <h4 class="text-2xl text-center">Kedisiplinan</h4>
+                <p class="">Aturan tentang ketepatan waktu dalam menghadiri kelas, batas keterlambatan, dan kehadiran
+                    yang
+                    diwajibkan pada kegiatan akademik atau non-akademik tertentu.</p>
+                <a href="" class="w-full flex justify-between">Learn More <img
+                        src="assets/img/Arrow_right_light.pdf.png" class="w-7" alt=""></a>
+            </div>
 
+            <div class="flex flex-col justify-between w-96 h-80 bg-gray-200 rounded-3xl px-8 pt-12 pb-8">
+                <h4 class="text-2xl text-center">Etika Perilaku</h4>
+                <p class="">Panduan mengenai sikap yang harus dijaga oleh mahasiswa, seperti menghormati dosen dan
+                    sesama
+                    mahasiswa, serta menghindari tindakan-tindakan yang dapat mengganggu ketertiban.</p>
+                <a href="" class="w-full flex justify-between">Learn More <img
+                        src="assets/img/Arrow_right_light.pdf.png" class="w-7" alt=""></a>
+            </div>
+
+            <div class="flex flex-col justify-between w-96 h-80 bg-gray-200 rounded-3xl px-8 pt-12 pb-8">
+                <h4 class="text-2xl text-center">Sanksi</h4>
+                <p class="">Aturan yang menetapkan jenis pelanggaran dan konsekuensi atau sanksi yang dapat diterapkan,
+                    seperti
+                    teguran, peringatan tertulis, skorsing, atau tindakan disipliner lainnya.</p>
+                <a href="" class="w-full flex justify-between">Learn More <img
+                        src="assets/img/Arrow_right_light.pdf.png" class="w-7" alt=""></a>
             </div>
         </div>
     </section>
+
+    <section class="flex justify-between gap-10 px-28 my-12" id="POCTatib">
+        <div class="flex flex-col pr-28 py-20 gap-6 w-">
+            <h2 class="text-5xl leading" style="line-height: 56px;">Purpose of the <br><span class="text-blue-600">Code of Conduct</span></h2>
+            <p>Tujuan Tata Tertib Kampus adalah untuk menciptakan lingkungan akademis yang kondusif dan harmonis, di
+                mana seluruh civitas akademika dapat belajar, bekerja, dan berinteraksi dengan nyaman dan aman. Tata
+                tertib ini disusun untuk meningkatkan kedisiplinan, menumbuhkan rasa tanggung jawab, serta membangun
+                etika dan integritas dalam setiap aktivitas di kampus, sehingga tercipta budaya kampus yang saling
+                menghormati dan mendukung tercapainya prestasi bersama.</p>
+        </div>
+        <img src="assets/img/POC.png" class="w-1/2 rounded-3xl" alt="">
+    </section>
+
+    <section class="flex justify-between gap-10 px-28 my-36" id="importantInfo">
+        <div class="w-1/2 relative">
+            <img src="assets/img/Important-Info-L.png" class="relative w-fit rounded-3xl" alt="">
+            <div class="absolute top-16 left-0 flex flex-col gap-6 text-white pl-16 pr-10">
+                <h1 class="text-6xl">Contact and Help</h1>
+                <p class="text-xl">Hubungi kami jika ada pertanyaan terkait tata tertib atau butuh bantuan lebih lanjut.</p>
+                <a href="" class="btn btn-primary w-fit px-9 py-2" style="font-family: 'product Sans Bold'">Hubungi Admin</a>
+            </div>
+        </div>
+
+        <div class="w-1/2 relative">
+            <img src="assets/img/Important-Info-R.png" class="relative w-fit rounded-3xl" alt="">
+            <div class="absolute top-16 left-0 flex flex-col gap-6 text-white pl-16 pr-10">
+                <h1 class="text-6xl">Full PDF of the rules</h1>
+                <p class="text-xl">Silakan baca PDF ini untuk lebih lengkap nya dan agar mahasiswa lebih mengetahui peraturan di kampus.</p>
+                <a href="" class="btn btn-primary w-fit px-9 py-2" style="font-family: 'product Sans Bold'">View Rules</a>
+            </div>
+        </div>
+    </section>
+
+    <section class="px-28 my-24" id="FAQJumbotron">
+        <div class="flex justify-center items-center w-full h-64 rounded-3xl">
+            <h1 class="text-white text-4xl">Frequently Asked Questions <span class="text-blue-600">(FAQ)</span></h1>
+        </div>
+    </section>
+
+    <section class="flex flex-col items-center gap-10 px-28 my-12" id="FAQ">
+        <h3 class="text-3xl my-10">Some <span class="text-blue-600">Questions</span> From <span class="text-blue-600">Students</span></h3>
+        <div class="w-full flex flex-col items-center gap-10 px-14">
+            <div class="w-full h-32 flex justify-between items-center gap-5 border-5 border-dashed rounded-xl border-gray-500 px-10 py-3">
+                <img src="assets/img/FAQ.pdf.png" class="h-10" alt="">
+                <h4 class="text-2xl w-full">Apa tujuan utama dari Tata Tertib Kampus?</h4>
+                <img src="assets/img/Expand_down_light.png" class="h-14" alt="">
+            </div>
+
+            <div class="w-full h-32 flex justify-between items-center gap-5 border-5 border-dashed rounded-xl border-gray-500 px-10 py-3">
+                <img src="assets/img/FAQ.pdf.png" class="h-10" alt="">
+                <h4 class="text-2xl w-full">Apakah tata tertib berlaku di luar kampus?</h4>
+                <img src="assets/img/Expand_down_light.png" class="h-14" alt="">
+            </div>
+
+            <div class="w-full h-32 flex justify-between items-center gap-5 border-5 border-dashed rounded-xl border-gray-500 px-10 py-3">
+                <img src="assets/img/FAQ.pdf.png" class="h-10" alt="">
+                <h4 class="text-2xl w-full">Bagaimana cara melaporkan pelanggaran tata tertib?</h4>
+                <img src="assets/img/Expand_down_light.png" class="h-14" alt="">
+            </div>
+
+            <div class="w-full h-32 flex justify-between items-center gap-5 border-5 border-dashed rounded-xl border-gray-500 px-10 py-3">
+                <img src="assets/img/FAQ.pdf.png" class="h-10" alt="">
+                <h4 class="text-2xl w-full">Apa yang dimaksud dengan pelanggaran tata tertib ringan, sedang, dan berat?</h4>
+                <img src="assets/img/Expand_down_light.png" class="h-14" alt="">
+            </div>
+
+            <div class="w-full h-32 flex justify-between items-center gap-5 border-5 border-dashed rounded-xl border-gray-500 px-10 py-3">
+                <img src="assets/img/FAQ.pdf.png" class="h-10" alt="">
+                <h4 class="text-2xl w-full">Apa saja hak yang dimiliki mahasiswa di lingkungan kampus?</h4>
+                <img src="assets/img/Expand_down_light.png" class="h-14" alt="">
+            </div>
+        </div>
+    </section>
+
+    <section class="w-full px-28 my-36" id="feedback">
+        <h2 class="text-4xl text-center my-36">Student <span class="text-blue-600">Feedback</span></h2>
+        <div>
+
+        </div>
+    </section>
+
+    <footer>
+            
+    </footer>
 </body>
 
 </html>
