feat: index feedback & login

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
             <a href="" class="border-2 pb-1 border-transparent hover:border-b-2 hover:border-b-white">Guide Book</a>
         </div>
         <div class="w-1/3 flex justify-end" id="LoginBtn">
-            <a href="" class="btn btn-primary items-center text-white px-9 py-2 rounded-lg">Get Started</a>
+            <a href="src/Login.html" class="btn btn-primary items-center text-white px-9 py-2 rounded-lg">Get Started</a>
         </div>
     </nav>
 
-    <header class="flex flex-col justify-center items-center w-full h-full text-center text-white">
+    <header class="flex flex-col justify-center items-center w-full h-full text-center text-white px-24">
         <h1 class="text-6xl font-bold text-blue-600 my-8">
             Campus Harmony<br /><span class="text-white">Begins With Clear Rules</span>
         </h1>
@@ -39,7 +39,7 @@
             style="font-family: 'product Sans Bold'">View Book</a>
     </header>
 
-    <section class="flex justify-center -mt-32 gap-10" id="features">
+    <section class="flex justify-center flex-wrap -mt-12 lg:-mt-32 gap-10" id="features">
         <div class="relative">
             <img src="assets/img/Vector_garis.png" class="relative w-52 z-10" alt="" /><img src="assets/img/Vector.png"
                 class="absolute w-44 top-4 left-4 z-20" alt="" />
@@ -93,8 +93,8 @@
             membantu menjaga suasana kondusif untuk belajar, bekerja, dan
             berinteraksi dengan sesama.
         </p>
-        <div class="flex flex-row gap-5">
-            <div class="flex flex-col justify-between w-96 h-80 bg-gray-200 rounded-3xl px-8 pt-12 pb-8">
+        <div class="flex flex-col lg:flex-row gap-5 items-center">
+            <div class="flex flex-col justify-between w-4/5 lg:w-1/3 h-96 bg-gray-200 rounded-3xl px-8 pt-12 pb-8">
                 <h4 class="text-2xl text-center">Kedisiplinan</h4>
                 <p class="">Aturan tentang ketepatan waktu dalam menghadiri kelas, batas keterlambatan, dan kehadiran
                     yang
@@ -103,7 +103,7 @@
                         src="assets/img/Arrow_right_light.pdf.png" class="w-7" alt=""></a>
             </div>
 
-            <div class="flex flex-col justify-between w-96 h-80 bg-gray-200 rounded-3xl px-8 pt-12 pb-8">
+            <div class="flex flex-col justify-between w-4/5 lg:w-1/3 h-96 bg-gray-200 rounded-3xl px-8 pt-12 pb-8">
                 <h4 class="text-2xl text-center">Etika Perilaku</h4>
                 <p class="">Panduan mengenai sikap yang harus dijaga oleh mahasiswa, seperti menghormati dosen dan
                     sesama
@@ -112,7 +112,7 @@
                         src="assets/img/Arrow_right_light.pdf.png" class="w-7" alt=""></a>
             </div>
 
-            <div class="flex flex-col justify-between w-96 h-80 bg-gray-200 rounded-3xl px-8 pt-12 pb-8">
+            <div class="flex flex-col justify-between w-4/5 lg:w-1/3 h-96 bg-gray-200 rounded-3xl px-8 pt-12 pb-8">
                 <h4 class="text-2xl text-center">Sanksi</h4>
                 <p class="">Aturan yang menetapkan jenis pelanggaran dan konsekuensi atau sanksi yang dapat diterapkan,
                     seperti
@@ -125,7 +125,8 @@
 
     <section class="flex justify-between gap-10 px-28 my-12" id="POCTatib">
         <div class="flex flex-col pr-28 py-20 gap-6 w-">
-            <h2 class="text-5xl leading" style="line-height: 56px;">Purpose of the <br><span class="text-blue-600">Code of Conduct</span></h2>
+            <h2 class="text-5xl leading" style="line-height: 56px;">Purpose of the <br><span class="text-blue-600">Code
+                    of Conduct</span></h2>
             <p>Tujuan Tata Tertib Kampus adalah untuk menciptakan lingkungan akademis yang kondusif dan harmonis, di
                 mana seluruh civitas akademika dapat belajar, bekerja, dan berinteraksi dengan nyaman dan aman. Tata
                 tertib ini disusun untuk meningkatkan kedisiplinan, menumbuhkan rasa tanggung jawab, serta membangun
@@ -140,8 +141,10 @@
             <img src="assets/img/Important-Info-L.png" class="relative w-fit rounded-3xl" alt="">
             <div class="absolute top-16 left-0 flex flex-col gap-6 text-white pl-16 pr-10">
                 <h1 class="text-6xl">Contact and Help</h1>
-                <p class="text-xl">Hubungi kami jika ada pertanyaan terkait tata tertib atau butuh bantuan lebih lanjut.</p>
-                <a href="" class="btn btn-primary w-fit px-9 py-2" style="font-family: 'product Sans Bold'">Hubungi Admin</a>
+                <p class="text-xl">Hubungi kami jika ada pertanyaan terkait tata tertib atau butuh bantuan lebih lanjut.
+                </p>
+                <a href="" class="btn btn-primary w-fit px-9 py-2" style="font-family: 'product Sans Bold'">Hubungi
+                    Admin</a>
             </div>
         </div>
 
@@ -149,8 +152,10 @@
             <img src="assets/img/Important-Info-R.png" class="relative w-fit rounded-3xl" alt="">
             <div class="absolute top-16 left-0 flex flex-col gap-6 text-white pl-16 pr-10">
                 <h1 class="text-6xl">Full PDF of the rules</h1>
-                <p class="text-xl">Silakan baca PDF ini untuk lebih lengkap nya dan agar mahasiswa lebih mengetahui peraturan di kampus.</p>
-                <a href="" class="btn btn-primary w-fit px-9 py-2" style="font-family: 'product Sans Bold'">View Rules</a>
+                <p class="text-xl">Silakan baca PDF ini untuk lebih lengkap nya dan agar mahasiswa lebih mengetahui
+                    peraturan di kampus.</p>
+                <a href="" class="btn btn-primary w-fit px-9 py-2" style="font-family: 'product Sans Bold'">View
+                    Rules</a>
             </div>
         </div>
     </section>
@@ -162,33 +167,40 @@
     </section>
 
     <section class="flex flex-col items-center gap-10 px-28 my-12" id="FAQ">
-        <h3 class="text-3xl my-10">Some <span class="text-blue-600">Questions</span> From <span class="text-blue-600">Students</span></h3>
+        <h3 class="text-3xl my-10">Some <span class="text-blue-600">Questions</span> From <span
+                class="text-blue-600">Students</span></h3>
         <div class="w-full flex flex-col items-center gap-10 px-14">
-            <div class="w-full h-32 flex justify-between items-center gap-5 border-5 border-dashed rounded-xl border-gray-500 px-10 py-3">
+            <div
+                class="w-full h-32 flex justify-between items-center gap-5 border-5 border-dashed rounded-xl border-gray-500 px-10 py-3">
                 <img src="assets/img/FAQ.pdf.png" class="h-10" alt="">
                 <h4 class="text-2xl w-full">Apa tujuan utama dari Tata Tertib Kampus?</h4>
                 <img src="assets/img/Expand_down_light.png" class="h-14" alt="">
             </div>
 
-            <div class="w-full h-32 flex justify-between items-center gap-5 border-5 border-dashed rounded-xl border-gray-500 px-10 py-3">
+            <div
+                class="w-full h-32 flex justify-between items-center gap-5 border-5 border-dashed rounded-xl border-gray-500 px-10 py-3">
                 <img src="assets/img/FAQ.pdf.png" class="h-10" alt="">
                 <h4 class="text-2xl w-full">Apakah tata tertib berlaku di luar kampus?</h4>
                 <img src="assets/img/Expand_down_light.png" class="h-14" alt="">
             </div>
 
-            <div class="w-full h-32 flex justify-between items-center gap-5 border-5 border-dashed rounded-xl border-gray-500 px-10 py-3">
+            <div
+                class="w-full h-32 flex justify-between items-center gap-5 border-5 border-dashed rounded-xl border-gray-500 px-10 py-3">
                 <img src="assets/img/FAQ.pdf.png" class="h-10" alt="">
                 <h4 class="text-2xl w-full">Bagaimana cara melaporkan pelanggaran tata tertib?</h4>
                 <img src="assets/img/Expand_down_light.png" class="h-14" alt="">
             </div>
 
-            <div class="w-full h-32 flex justify-between items-center gap-5 border-5 border-dashed rounded-xl border-gray-500 px-10 py-3">
+            <div
+                class="w-full h-32 flex justify-between items-center gap-5 border-5 border-dashed rounded-xl border-gray-500 px-10 py-3">
                 <img src="assets/img/FAQ.pdf.png" class="h-10" alt="">
-                <h4 class="text-2xl w-full">Apa yang dimaksud dengan pelanggaran tata tertib ringan, sedang, dan berat?</h4>
+                <h4 class="text-2xl w-full">Apa yang dimaksud dengan pelanggaran tata tertib ringan, sedang, dan berat?
+                </h4>
                 <img src="assets/img/Expand_down_light.png" class="h-14" alt="">
             </div>
 
-            <div class="w-full h-32 flex justify-between items-center gap-5 border-5 border-dashed rounded-xl border-gray-500 px-10 py-3">
+            <div
+                class="w-full h-32 flex justify-between items-center gap-5 border-5 border-dashed rounded-xl border-gray-500 px-10 py-3">
                 <img src="assets/img/FAQ.pdf.png" class="h-10" alt="">
                 <h4 class="text-2xl w-full">Apa saja hak yang dimiliki mahasiswa di lingkungan kampus?</h4>
                 <img src="assets/img/Expand_down_light.png" class="h-14" alt="">
@@ -198,13 +210,21 @@
 
     <section class="w-full px-28 my-36" id="feedback">
         <h2 class="text-4xl text-center my-36">Student <span class="text-blue-600">Feedback</span></h2>
-        <div>
-
+        <div class="mx-auto flex flex-col items-center justify-between w-3/4 h-80 shadow-xl border rounded-3xl px-24 pb-8">
+            <div class="bg-slate-200 size-24 rounded-full -mt-12"></div>
+            <p class="px-28 text-center text-lg">Sistem Tata Tertib Kampus ini membantu saya lebih memahami aturan kampus dengan mudah. Proses pelaporan
+                dan banding juga sangat transparan.</p>
+            
+                <div class="text-center">
+                    <h6 class="text-blue-600 text-xl">Rizky A</h6>
+                    <p>Mahasiswa Teknik Elektro, Politeknik Negeri Malang</p>
+                </div>
         </div>
     </section>
 
-    <footer>
-            
+    <footer class="w-full h-32 flex items-center justify-between text-white text-xl px-12">
+        <h5>TatibHub By Politeknik Negeri Malang</h5>
+        <h5>© 2024 Alleviate. All rights reserved.</h5>
     </footer>
 </body>
 
