--- a/src/Login.html
+++ b/src/Login.html
@@ -15,7 +15,7 @@
 <body>
     <main class="flex justify-between">
         <img src="../assets/img/FOTO_login.svg" class="h-screen" alt="">
-        <form action="../backend/login.php" method="post" class="flex flex-col justify-center items-center gap-3 pr-28 w-full">
+        <form action="" method="post" class="flex flex-col justify-center items-center gap-3 pr-28 w-full">
             <img src="../assets/img/LOGO JTI 1.pdf.png" class="w-24" alt="">
             <h1 class="text-4xl">Welcome Back</h1>
             <p class="px-24 text-center">Silakan login terlebih dahulu untuk mengakses fitur selanjutnya</p>
