--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="" class="border-2 pb-1 border-transparent hover:border-b-2 hover:border-b-white">Guide Book</a>
         </div>
         <div class="w-1/3 flex justify-end" id="LoginBtn">
-            <a href="src/Login.html" class="btn btn-primary items-center text-white px-9 py-2 rounded-lg">Get Started </a>
+            <a href="src/Login.html" class="btn btn-primary items-center text-white px-9 py-2 rounded-lg">Mulai Sekarang</a>
         </div>
     </nav>
 
